--- a/Ejercicios/Ejercicio JavaScript Web/index.html
+++ b/Ejercicios/Ejercicio JavaScript Web/index.html
@@ -13,34 +13,7 @@
       <button id="add-1-dog">Añade 1 perrito</button>
       <button id="add-5-dog">Añade 5 perritos</button>
     </div>
-    <div class="dog-container">
-      <div class="container">
-        <div class="img-container">
-          <img src="./img/istockphoto-465377790-612x612.jpg" alt="" />
-        </div>
-        <div class="emoji-container">
-          <p class="like-counter">❤️:0</p>
-          <p>🤬</p>
-        </div>
-        <div class="emoji-container">
-          <button class="like-button">Me gusta</button>
-          <button class="not-like-button">No me gusta</button>
-        </div>
-      </div>
-      <div class="container">
-        <div class="img-container">
-          <img src="./img/images.jpeg" alt="" />
-        </div>
-        <div class="emoji-container">
-          <p class="like-counter">❤️0</p>
-          <p>🤬</p>
-        </div>
-        <div class="emoji-container">
-          <button class="like-button">Me gusta</button>
-          <button class="not-like-button">No me gusta</button>
-        </div>
-      </div>
-    </div>
+    <div class="dog-container"></div>
     <div class="container-counters">
       <p id="totalDogsCounter">Total Dogs: 1</p>
       <p id="totalLikedDogs">Liked Dogs: 0</p>
