más ejercicios de JavaScript en Web

--- a/Ejercicios/Ejercicio JavaScript Web/index.html
+++ b/Ejercicios/Ejercicio JavaScript Web/index.html
@@ -20,7 +20,8 @@
         <button id="add-5-start">Añadir 5 perricos al principio</button>
       </div>
       <div class="filter-button">
-        <button id="only-like-dogs">Elimina los perros sin likes</button>
+        <button id="only-like-dogs">Solo perros con likes</button>
+        <button id="return-all-dogs">Quitar filtros de likes</button>
       </div>
     </div>
     <div class="dog-container"></div>
@@ -30,6 +31,9 @@
         Liked Dogs: <span class="likedDogsNumber">0</span>
       </p>
       <p id="total-likes">Total Likes: <span id="likes-number">0</span></p>
+      <p id="filtered-dogs">
+        Filtered Dogs: <span id="filter-dogs-num">0</span>
+      </p>
     </div>
   </body>
   <script src="./index.js"></script>
