--- a/proyectsJs/Clock/index.html
+++ b/proyectsJs/Clock/index.html
@@ -14,6 +14,13 @@
         <div class="hand second-hand"></div>
       </div>
     </div>
+    <div class="time-in-numbers">
+      <p class="time-to-birthday">
+        <span class="hours">24</span> horas :
+        <span class="minutes">59</span> minutos :
+        <span class="seconds">59</span> segundos
+      </p>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
