--- a/proyectsJs/cook-timer/index.html
+++ b/proyectsJs/cook-timer/index.html
@@ -19,21 +19,22 @@
           Carli's Cooking Timer
         </h1>
         <h2 class="menu-container--h2 font-size__24 color__green">
-          ¿What do you want to cook?
+          What do you want to cook?
         </h2>
         <div class="menu-container--button-container display__flex">
           <div class="menu-container--button">
             <a href="./egg.html">
-              <img src="./imgs/img-egg-1.png" alt="" />
+              <img src="./imgs/img-egg-1.png" alt="Egg" class="icon1" />
             </a>
           </div>
           <div class="menu-container--button">
             <a href="./pasta.html">
-              <img src="./imgs/img-pasta-1.png" alt="" />
+              <img src="./imgs/img-pasta-1.png" alt="Pasta" class="icon2" />
             </a>
           </div>
         </div>
       </section>
     </div>
   </body>
+  <script src="./script.js"></script>
 </html>
