--- a/proyectsJs/cook-timer/egg.html
+++ b/proyectsJs/cook-timer/egg.html
@@ -43,8 +43,8 @@
         </div>
       </section>
     </div>
+    <script src="./script.js" defer></script>
   </body>
-  <script src="./script.js"></script>
 </html>
 
 <audio src="./audios/clock-start.mp3"></audio>
