--- a/Ejercicios/Ejercicio-tasks/index.html
+++ b/Ejercicios/Ejercicio-tasks/index.html
@@ -1,41 +1,10 @@
 <html>
-  <head> </head>
-  <style>
-    .buttons {
-      display: flex;
-      gap: 12px;
-      align-items: center;
-      flex-wrap: wrap;
-      margin-bottom: 24px;
-    }
-
-    .task {
-      border-radius: 8px;
-      padding: 8px 6px;
-      border: 1px solid #ccc;
-    }
-
-    .fav-button {
-      display: none;
-    }
-
-    .task:hover .fav-button {
-      display: inline-block;
-    }
-
-    .task + .task {
-      margin-top: 12px;
-    }
-
-    .completed {
-      text-decoration: line-through;
-    }
-
-    .status {
-      font-size: 0.8em;
-      color: #c2bcbc;
-    }
-  </style>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tasks</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
   <body class="content">
     <form id="create-task">
       <input
