title and category in receipe work

--- a/proyectsJs/cook-timer/receipes-title.html
+++ b/proyectsJs/cook-timer/receipes-title.html
@@ -15,7 +15,7 @@
   <body>
     <div class="display__flex viewport__100vh">
       <section class="menu-container">
-        <form class="form-container">
+        <form class="form-container form-container-title">
           <h2 class="menu-container--h2 font-size__24 color__yellow">Title</h2>
           <input
             type="text"
@@ -29,13 +29,19 @@
           Categories
         </h2>
         <div class="categories-container display__flex">
-          <button class="timer-counter-container--button font-size__16">
+          <button
+            class="timer-counter-container--button button--appetizers font-size__16"
+          >
             Appetizers
           </button>
-          <button class="timer-counter-container--button font-size__16">
+          <button
+            class="timer-counter-container--button button--main-course font-size__16"
+          >
             Main course
           </button>
-          <button class="timer-counter-container--button font-size__16">
+          <button
+            class="timer-counter-container--button button--dessert font-size__16"
+          >
             Dessert
           </button>
         </div>
@@ -54,8 +60,7 @@
             Back
           </a>
           <a
-            href="./ingredients.html"
-            class="counter-container--button font-size__24 color__white"
+            class="counter-container--button button-next-1 font-size__24 color__white"
           >
             Next
             <img
