--- a/proyectsJs/cook-timer/home.html
+++ b/proyectsJs/cook-timer/home.html
@@ -23,6 +23,7 @@
         </h2>
         <div class="display__flex">
           <a
+            href="receipes.html"
             class="menu-container--button menu-container--button__big font-size__24"
           >
             <img
