new filter implemented

--- a/proyectsJs/cook-timer/ingredients.html
+++ b/proyectsJs/cook-timer/ingredients.html
@@ -40,10 +40,7 @@
             />
             Back
           </a>
-          <a
-            href="./steps.html"
-            class="counter-container--button font-size__24 color__white"
-          >
+          <a class="counter-container--button font-size__24 color__white">
             Next
             <img
               src="./imgs/Vector.png"
