--- a/proyectsJs/cook-timer/ingredients.html
+++ b/proyectsJs/cook-timer/ingredients.html
@@ -15,14 +15,15 @@
   <body>
     <div class="display__flex viewport__100vh">
       <section class="menu-container">
-        <form class="form-container">
+        <form class="form-container form-container-ingredients">
           <h2 class="menu-container--h2 font-size__24 color__yellow">
             Ingredients
           </h2>
           <input
             type="text"
-            class="form-container--input"
-            placeholder="Cookies"
+            class="form-container-ingredients--input form-container--input"
+            placeholder="100g of butter"
+            name="ingredientsText"
           />
         </form>
         <div class="ingredients-container"></div>
