receipe Object saved

--- a/proyectsJs/cook-timer/ingredients.html
+++ b/proyectsJs/cook-timer/ingredients.html
@@ -41,7 +41,9 @@
             />
             Back
           </a>
-          <a class="counter-container--button font-size__24 color__white">
+          <a
+            class="counter-container--button button-next-2 font-size__24 color__white"
+          >
             Next
             <img
               src="./imgs/Vector.png"
