implementing breed filter

--- a/Ejercicios/dogsJosmi/index.html
+++ b/Ejercicios/dogsJosmi/index.html
@@ -23,6 +23,7 @@
       <span> Filter by: </span>
       <button id="like-filter">Preciosisimos ❤️</button>
       <button id="dislike-filter">Feísimos 🤮</button>
+      <button id="breed-filter">Filtrar por raza 🐕</button>
     </div>
     <div id="dog-list"></div>
   </body>
