--- a/proyectsJs/cook-timer/receipes.html
+++ b/proyectsJs/cook-timer/receipes.html
@@ -25,7 +25,7 @@
           <a
             class="menu-container--button menu-container--button__big font-size__24"
           >
-            <img src="./imgs/notes.png" alt="Watch" class="icon1" />
+            <img src="./imgs/notes.png" alt="Notes" class="icon1" />
             Read my receipes
           </a>
         </div>
@@ -34,7 +34,11 @@
             class="menu-container--button menu-container--button__big font-size__24"
             href="./receipes-title.html"
           >
-            <img src="./imgs/write-background.png" alt="Watch" class="icon1" />
+            <img
+              src="./imgs/write-background.png"
+              alt="Create receipe"
+              class="icon1"
+            />
             Create a receipe
           </a>
         </div>
