--- a/proyectsJs/cook-timer/steps.html
+++ b/proyectsJs/cook-timer/steps.html
@@ -37,8 +37,7 @@
           class="receipe-button-container display__flex-space-between margin-top__70"
         >
           <a
-            href="./ingredients.html"
-            class="counter-container--button font-size__24 color__white"
+            class="counter-container--button font-size__24 color__white button-back"
           >
             <img
               src="./imgs/back-white.png"
