--- a/proyectsJs/cook-timer/ingredients.html
+++ b/proyectsJs/cook-timer/ingredients.html
@@ -31,8 +31,7 @@
           class="receipe-button-container display__flex-space-between margin-top__70"
         >
           <a
-            href="./receipes-title.html"
-            class="counter-container--button font-size__24 color__white"
+            class="counter-container--button font-size__24 color__white button-back"
           >
             <img
               src="./imgs/back-white.png"
