--- a/proyectsJs/cook-timer/receipes-title.html
+++ b/proyectsJs/cook-timer/receipes-title.html
@@ -49,8 +49,7 @@
           class="receipe-button-container display__flex-space-between margin-top__70"
         >
           <a
-            href="./receipes.html"
-            class="counter-container--button font-size__24 color__white"
+            class="counter-container--button font-size__24 color__white button-back"
           >
             <img
               src="./imgs/back-white.png"
