ingredients saved correctly and receipe elimination in progress

--- a/proyectsJs/cook-timer/receipes-title.html
+++ b/proyectsJs/cook-timer/receipes-title.html
@@ -48,9 +48,7 @@
         <div
           class="receipe-button-container display__flex-space-between margin-top__70"
         >
-          <a
-            class="counter-container--button font-size__24 color__white button-back"
-          >
+          <a class="movement-button font-size__24 color__white button-back">
             <img
               src="./imgs/back-white.png"
               alt="Play Icons"
@@ -58,9 +56,7 @@
             />
             Back
           </a>
-          <a
-            class="counter-container--button button-next-1 font-size__24 color__white"
-          >
+          <a class="movement-button button-next-1 font-size__24 color__white">
             Next
             <img
               src="./imgs/Vector.png"
