--- a/proyectsJs/cook-timer/steps.html
+++ b/proyectsJs/cook-timer/steps.html
@@ -20,7 +20,7 @@
         >
           Steps
         </h2>
-        <form class="form-container display__flex">
+        <form class="form-container display__flex steps-form">
           <input
             type="text"
             class="form-container--input"
@@ -36,9 +36,7 @@
         <div
           class="receipe-button-container display__flex-space-between margin-top__70"
         >
-          <a
-            class="counter-container--button font-size__24 color__white button-back"
-          >
+          <a class="movement-button font-size__24 color__white button-back">
             <img
               src="./imgs/back-white.png"
               alt="Play Icons"
