--- a/proyectsJs/cook-timer/ingredients.html
+++ b/proyectsJs/cook-timer/ingredients.html
@@ -30,9 +30,7 @@
         <div
           class="receipe-button-container display__flex-space-between margin-top__70"
         >
-          <a
-            class="counter-container--button font-size__24 color__white button-back"
-          >
+          <a class="movement-button font-size__24 color__white button-back">
             <img
               src="./imgs/back-white.png"
               alt="Play Icons"
@@ -40,9 +38,7 @@
             />
             Back
           </a>
-          <a
-            class="counter-container--button button-next-2 font-size__24 color__white"
-          >
+          <a class="movement-button button-next-2 font-size__24 color__white">
             Next
             <img
               src="./imgs/Vector.png"
