steps added correctly to receipes object

--- a/proyectsJs/cook-timer/steps.html
+++ b/proyectsJs/cook-timer/steps.html
@@ -25,6 +25,7 @@
             type="text"
             class="form-container--input"
             placeholder="Cookies"
+            name="stepsText"
           />
         </form>
         <div class="steps-container"></div>
