trying to implement dog Filter

--- a/Ejercicios/dogsJosmi/index.html
+++ b/Ejercicios/dogsJosmi/index.html
@@ -25,11 +25,8 @@
       <button id="dislike-filter">Feísimos 🤮</button>
       <!-- <button id="breed-filter">Filtrar por raza 🐕</button> -->
     </div>
-    <div class="created-breed-filter">
-      <p>Filter by:</p>
-      <select name="select" id="filter-dog-select">
-        <option value="Everything">Everything</option>
-      </select>
+    <div class="created-breed-buttons-container">
+      <p>Filter by breed:</p>
     </div>
     <div id="dog-list"></div>
   </body>
