--- a/proyectsJs/cook-timer/steps.html
+++ b/proyectsJs/cook-timer/steps.html
@@ -30,12 +30,12 @@
         </form>
         <div class="steps-container"></div>
         <button
-          class="counter-container--button create-steps--button font-size__16 color__white margin-top__70"
+          class="counter-container--button create-steps--button font-size__16 color__white"
         >
           Finish receipe
         </button>
         <div
-          class="receipe-button-container display__flex-space-between margin-top__70"
+          class="receipe-button-container display__flex-space-between margin__20"
         >
           <a class="movement-button font-size__24 color__white button-back">
             <img
