steps added to html

--- a/proyectsJs/cook-timer/steps.html
+++ b/proyectsJs/cook-timer/steps.html
@@ -30,7 +30,7 @@
         </form>
         <div class="steps-container"></div>
         <button
-          class="counter-container--button create-steps--button font-size__16 color__white"
+          class="counter-container--button create-steps--button finish-receipe-button font-size__16 color__white"
         >
           Finish receipe
         </button>
