receipe finish (almost)

--- a/proyectsJs/cook-timer/steps.html
+++ b/proyectsJs/cook-timer/steps.html
@@ -30,7 +30,7 @@
         </form>
         <div class="steps-container"></div>
         <button
-          class="counter-container--button create-steps--button finish-receipe-button font-size__16 color__white"
+          class="finish-container--button create-steps--button finish-receipe-button font-size__16 color__white"
         >
           Finish receipe
         </button>
@@ -48,6 +48,7 @@
         </div>
       </section>
     </div>
+    <div class="finish--container"></div>
     <script src="./script.js" defer></script>
   </body>
 </html>
