--- a/proyectsJs/cook-timer/receipes.html
+++ b/proyectsJs/cook-timer/receipes.html
@@ -23,6 +23,7 @@
         </h2>
         <div class="display__flex">
           <a
+            href="./storage-receipes.html"
             class="menu-container--button menu-container--button__big font-size__24"
           >
             <img src="./imgs/notes.png" alt="Notes" class="icon1" />
