Problem at read receipes, need to change

--- a/proyectsJs/cook-timer/receipes.html
+++ b/proyectsJs/cook-timer/receipes.html
@@ -23,8 +23,7 @@
         </h2>
         <div class="display__flex">
           <a
-            href="./storage-receipes.html"
-            class="menu-container--button menu-container--button__big font-size__24"
+            class="menu-container--button menu-container--button__big font-size__24 receipe-storage-button"
           >
             <img src="./imgs/notes.png" alt="Notes" class="icon1" />
             Read my receipes
