--- a/proyectsJs/cook-timer/storage-receipes.html
+++ b/proyectsJs/cook-timer/storage-receipes.html
@@ -25,8 +25,12 @@
             class="menu-container--h2 font-size__24 color__green text-align__left"
           >
             You have no recipes listed. Start writing your ideas
-            <a class="color__yellow" href="./receipes-title.html">here</a> and
-            start cooking !!
+            <a
+              class="color__yellow text-decoration"
+              href="./receipes-title.html"
+              >here</a
+            >
+            and start cooking !!
           </p>
         </div>
       </section>
