--- a/proyectsJs/cook-timer/index.html
+++ b/proyectsJs/cook-timer/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="timer--container"></div>
-        <div class="display__flex">
+        <div class="display__flex personalized-timer--button">
           <button class="menu-container--button menu-container--button__big">
             <img src="./imgs/img-watch-1.png" alt="Watch" class="icon1" />
             Select my own timer
