return button implemented and receipe card function works

--- a/proyectsJs/cook-timer/index.html
+++ b/proyectsJs/cook-timer/index.html
@@ -15,6 +15,9 @@
   <body>
     <div class="display__flex viewport__100vh">
       <section class="menu-container">
+        <div class="display__flex-right">
+          <a href="./home.html" class="button__close-menu">X</a>
+        </div>
         <h1 class="menu-container--title font-size__36 color__yellow">
           Cooking Timer
         </h1>
