--- a/proyectsJs/cook-timer/receipes.html
+++ b/proyectsJs/cook-timer/receipes.html
@@ -15,6 +15,9 @@
   <body>
     <div class="display__flex viewport__100vh">
       <section class="menu-container">
+        <div class="display__flex-right">
+          <a href="./home.html" class="button__close-menu">X</a>
+        </div>
         <h1 class="menu-container--title font-size__36 color__yellow">
           My Coooking Receipes
         </h1>
@@ -23,6 +26,7 @@
         </h2>
         <div class="display__flex">
           <a
+            href="./storage-receipes.html"
             class="menu-container--button menu-container--button__big font-size__24 receipe-storage-button"
           >
             <img src="./imgs/notes.png" alt="Notes" class="icon1" />
