input type changed to password

--- a/Ejercicios/Ejercicio-tasks/sign.html
+++ b/Ejercicios/Ejercicio-tasks/sign.html
@@ -22,7 +22,7 @@
         <label for="">Password</label>
         <br />
         <input
-          type="text"
+          type="password"
           placeholder="******"
           id="sign-in--password"
           name="userPassword"
