--- a/Ejercicios/Ejercicio-tasks/register.html
+++ b/Ejercicios/Ejercicio-tasks/register.html
@@ -22,7 +22,7 @@
         <label for="sign-up--password">Password</label>
         <br />
         <input
-          type="text"
+          type="password"
           placeholder="******"
           id="sign-up--password"
           name="passwordText"
@@ -31,7 +31,7 @@
         <label for="sign-up--password-repeat"> Repeat Password</label>
         <br />
         <input
-          type="text"
+          type="password"
           placeholder="******"
           id="sign-up--password-repeat"
           name="repeatText"
