showing receipe almost works needs to check what is giving the browser problems

--- a/proyectsJs/cook-timer/info-receipe.html
+++ b/proyectsJs/cook-timer/info-receipe.html
@@ -18,10 +18,36 @@
         <div class="display__flex-right">
           <a href="./receipes.html" class="button__close-menu">X</a>
         </div>
-        <h2
-          class="menu-container--h2 font-size__36 color__yellow text-align__left"
-        ></h2>
-        <div class="receipes-card-container"></div>
+        <div class="display__flex-space-between">
+          <h2
+            class="receipe-info-title menu-container--h2 font-size__36 color__yellow text-align__left"
+          >
+            Cookies
+          </h2>
+          <p class="receipe-category">
+            Category:
+            <span class="color__yellow receipe-info-category">Dessert</span>
+          </p>
+        </div>
+        <div class="display__flex-top">
+          <div>
+            <h2
+              class="menu-container--h2 font-size__24 color__pink text-align__left margin__0"
+            >
+              Ingredients:
+            </h2>
+            <div class="receipe-info--container receipe-info-ingredients"></div>
+          </div>
+          <div>
+            <h2
+              class="menu-container--h2 font-size__24 color__pink text-align__left margin__0"
+            >
+              Steps:
+            </h2>
+            <div class="receipe-info--container receipe-info-steps"></div>
+          </div>
+        </div>
+        <button class="receipe-edit--button">Edit</button>
       </section>
     </div>
     <div class="finish--container"></div>
