--- a/proyectsJs/cook-timer/storage-receipes.html
+++ b/proyectsJs/cook-timer/storage-receipes.html
@@ -23,6 +23,14 @@
         >
           My receipes
         </h2>
+        <div
+          class="filter-button--container display__flex-basic align-items__center gap__10"
+        >
+          <p class="font-size__24 color__green text-align__left">Filter by:</p>
+          <button class="filter-button filter-appetizer">Appetizer</button>
+          <button class="filter-button filter-main-course">Main Course</button>
+          <button class="filter-button filter-dessert">Dessert</button>
+        </div>
         <div class="receipes-card-container">
           <p
             class="menu-container--h2 font-size__24 color__green text-align__left"
