--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -14,12 +14,6 @@
   </head>
   <body>
     <header class="header-fixed">
-      <div
-        class="display--flex space--between padding--lateral__24 align-itmes__center margin--bt__24"
-      >
-        <p>Logo</p>
-        <button>Menu</button>
-      </div>
       <div class="padding--lateral__24 margin--bt__24">
         <input
           class="search-bar"
@@ -42,227 +36,22 @@
     </header>
     <section class="grid padding--lateral__24">
       <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
         <div class="event-card--text">
           <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
-          </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
-        </div>
-      </div>
-      <div class="event-card grid-cell margin--bt__24">
-        <div class="event-card--image position-relative">
-          <img
-            class="max-width border-radius__12"
-            src="./imgs/ignacio-brosa-vJDbPuxUS_s-unsplash.jpg"
-            alt="Park"
-          />
-          <button class="fav-button">&#9829;</button>
-        </div>
-        <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
-            <h3 class="event-card--text__title">Title</h3>
-            <p class="event-card--text__p">Rating</p>
+            <div
+              class="event-card--text__p display--flex flex-direction-column"
+            >
+              <h3 class="event-card--text__title">Álvaro Giner</h3>
+              <div class="display--flex">
+                <p class="margin-none">Estado:</p>
+                <select name="userState" id="">
+                  <option value="text">Interesado</option>
+                  <option value="text">No interesado</option>
+                  <option value="text">Conversión</option>
+                </select>
+              </div>
+              <p class="margin-none">ID: 1243422</p>
+            </div>
           </div>
           <p class="event-card--text__p">Date and hour</p>
           <p class="event-card--text__p">Location</p>
