--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -37,25 +37,41 @@
     <section class="grid padding--lateral__24">
       <div class="event-card grid-cell margin--bt__24">
         <div class="event-card--text">
-          <div class="display--flex align-itmes__center space--between">
+          <div class="display--flex">
+            <div>
+              <div class="rating-container">9.6</div>
+              <p class="margin-none text-align-center font-size__12">
+                ID: 1243422
+              </p>
+            </div>
             <div
-              class="event-card--text__p display--flex flex-direction-column"
+              class="event-card--text__p display--flex flex-direction-column margin--left__24"
             >
               <h3 class="event-card--text__title">Álvaro Giner</h3>
               <div class="display--flex">
-                <p class="margin-none">Estado:</p>
-                <select name="userState" id="">
-                  <option value="text">Interesado</option>
+                <p class="margin-none color-orange">Estado:</p>
+                <select name="userState" id="" class="margin--left__6">
+                  <option class="" value="text">Interesado</option>
                   <option value="text">No interesado</option>
                   <option value="text">Conversión</option>
                 </select>
               </div>
-              <p class="margin-none">ID: 1243422</p>
             </div>
           </div>
-          <p class="event-card--text__p">Date and hour</p>
-          <p class="event-card--text__p">Location</p>
-          <p class="event-card--text__p">Activity</p>
+          <hr />
+          <div
+            class="event-card--button-container display--flex space--between"
+          >
+            <button class="button-container--button">
+              <img src="./imgs/phone.svg" alt="" />
+            </button>
+            <button class="button-container--button">
+              <img src="./imgs/email.svg" alt="" />
+            </button>
+            <button class="button-container--button">
+              <img src="./imgs/account-box-edit-outline.svg" alt="" />
+            </button>
+          </div>
         </div>
       </div>
     </section>
