--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -72,6 +72,25 @@
               <img src="./imgs/account-box-edit-outline.svg" alt="" />
             </button>
           </div>
+          <div class="event-card--sub-section">
+            <p class="sub-section--title">Calls:</p>
+            <div class="sub-section--container">
+              <p>Call Rating:</p>
+              <hr />
+              <p class="sub-section--container__title">Interest:</p>
+              <select
+                name="interestRating"
+                class="sub-section--select-number"
+                id=""
+              >
+                <option value="text">1</option>
+                <option value="text">2</option>
+                <option value="text">3</option>
+                <option value="text">4</option>
+                <option value="text">5</option>
+              </select>
+            </div>
+          </div>
         </div>
       </div>
     </section>
