animation for buttons of subsection

--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -201,7 +201,7 @@
           <div
             class="event-card--button-container display--flex space--between"
           >
-            <button class="button-container--button">
+            <button class="button-container--button button-container--button__selected">
               <img src="./imgs/phone.svg" alt="" />
             </button>
             <button class="button-container--button">
