--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -84,7 +84,7 @@
                       <div
                         class="display--flex align-itmes__center space--between"
                       >
-                        <p class="sub-section--container__title">Interest:</p>
+                        <p class="sub-section--container__title">Interest: </p>
                         <select
                           name="interestRating"
                           class="sub-section--select-number margin--left__6"
@@ -151,6 +151,22 @@
                         class="display--flex align-itmes__center space--between"
                       >
                         <p class="sub-section--container__title">Clousure:</p>
+                        <select
+                          name="interestRating"
+                          class="sub-section--select-number margin--left__6"
+                          id=""
+                        >
+                          <option value="text">1</option>
+                          <option value="text">2</option>
+                          <option value="text">3</option>
+                          <option value="text">4</option>
+                          <option value="text">5</option>
+                        </select>
+                      </div>
+                      <div
+                        class="display--flex align-itmes__center space--between"
+                      >
+                        <p class="sub-section--container__title">Technical:</p>
                         <select
                           name="interestRating"
                           class="sub-section--select-number margin--left__6"
