--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -180,7 +180,7 @@
                         </select>
                       </div>
                     </div>
-                    <div class="display--flex width__100 align-items__flex-end justify-content-right">
+                    <div class="display--flex width__100 align-items__flex-end justify-content-right margin--left__12">
                       <button class="finish-edit--button">Finish</button>
                     </div>
                   </div>
