error at renderCall, need to update the parameter user at  the call of the function createDataCal

--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -39,7 +39,9 @@
         <div class="event-card--text">
           <div class="display--flex">
             <div>
-              <div class="rating-container">9.6</div>
+              <div class="rating-container">
+                <p class="margin-none">9.6</p>
+              </div>
               <p class="margin-none text-align-center font-size__12">
                 ID: 1243422
               </p>
