--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -35,25 +35,21 @@
       </div>
     </header>
     <section class="grid padding--lateral__24 users-grid">
-      <div class="event-card user-card grid-cell margin--bt__24">
-        <div class="event-card--text">
+      <div class="card">
+        <div class="event-card user-card grid-cell">
           <div class="display--flex">
             <div>
               <div class="rating-container">
                 <p class="margin-none">9.6</p>
               </div>
-              <p class="margin-none text-align-center font-size__12">
-                ID: 1243422
-              </p>
+              <p class="margin-none text-align-center font-size__12">ID: 1243422</p>
             </div>
-            <div
-              class="event-card--text__p display--flex flex-direction-column margin--left__24"
-            >
+            <div class="event-card--text__p display--flex flex-direction-column margin--left__24">
               <h3 class="event-card--text__title">Álvaro Giner</h3>
               <div class="display--flex">
                 <p class="margin-none color-orange">Estado:</p>
-                <select name="userState" id="" class="margin--left__6">
-                  <option class="" value="text">Interesado</option>
+                <select name="userState" class="margin--left__6">
+                  <option value="text">Interesado</option>
                   <option value="text">No interesado</option>
                   <option value="text">Conversión</option>
                 </select>
@@ -61,9 +57,7 @@
             </div>
           </div>
           <hr />
-          <div
-            class="event-card--button-container display--flex space--between"
-          >
+          <div class="event-card--button-container display--flex space--between">
             <button class="button-container--button">
               <img src="./imgs/phone.svg" alt="" />
             </button>
@@ -74,121 +68,66 @@
               <img src="./imgs/account-box-edit-outline.svg" alt="" />
             </button>
           </div>
-            <div class="event-card--sub-section">
-                <div class="sub-section--container">
-                  <div class="display--flex space--between align-itmes__center">
-                    <p class="margin-none">Call 1</p>
-                    <p class="sub-section--rating--container">4.3</p>
-                  </div>
-                  <hr />
-                  <div class="display--flex">
-                    <div>
-                      <div
-                        class="display--flex align-itmes__center space--between"
-                      >
-                        <p class="sub-section--container__title">Interest: </p>
-                        <select
-                          name="interestRating"
-                          class="sub-section--select-number margin--left__6"
-                          id=""
-                        >
-                          <option value="text">1</option>
-                          <option value="text">2</option>
-                          <option value="text">3</option>
-                          <option value="text">4</option>
-                          <option value="text">5</option>
-                        </select>
-                      </div>
-                      <div
-                        class="display--flex align-itmes__center space--between"
-                      >
-                        <p class="sub-section--container__title">Objections:</p>
-                        <select
-                          name="interestRating"
-                          class="sub-section--select-number margin--left__6"
-                          id=""
-                        >
-                          <option value="text">1</option>
-                          <option value="text">2</option>
-                          <option value="text">3</option>
-                          <option value="text">4</option>
-                          <option value="text">5</option>
-                        </select>
-                      </div>
-                      <div
-                        class="display--flex align-itmes__center space--between"
-                      >
-                        <p class="sub-section--container__title">Duration:</p>
-                        <select
-                          name="interestRating"
-                          class="sub-section--select-number margin--left__6"
-                          id=""
-                        >
-                          <option value="text">1</option>
-                          <option value="text">2</option>
-                          <option value="text">3</option>
-                          <option value="text">4</option>
-                          <option value="text">5</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="margin--left__12">
-                      <div
-                        class="display--flex align-itmes__center space--between"
-                      >
-                        <p class="sub-section--container__title">Potential:</p>
-                        <select
-                          name="interestRating"
-                          class="sub-section--select-number margin--left__6"
-                          id=""
-                        >
-                          <option value="text">1</option>
-                          <option value="text">2</option>
-                          <option value="text">3</option>
-                          <option value="text">4</option>
-                          <option value="text">5</option>
-                        </select>
-                      </div>
-                      <div
-                        class="display--flex align-itmes__center space--between"
-                      >
-                        <p class="sub-section--container__title">Clousure:</p>
-                        <select
-                          name="interestRating"
-                          class="sub-section--select-number margin--left__6"
-                          id=""
-                        >
-                          <option value="text">1</option>
-                          <option value="text">2</option>
-                          <option value="text">3</option>
-                          <option value="text">4</option>
-                          <option value="text">5</option>
-                        </select>
-                      </div>
-                      <div
-                        class="display--flex align-itmes__center space--between"
-                      >
-                        <p class="sub-section--container__title">Technical:</p>
-                        <select
-                          name="interestRating"
-                          class="sub-section--select-number margin--left__6"
-                          id=""
-                        >
-                          <option value="text">1</option>
-                          <option value="text">2</option>
-                          <option value="text">3</option>
-                          <option value="text">4</option>
-                          <option value="text">5</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="display--flex width__100 align-items__flex-end justify-content-right margin--left__12">
-                      <button class="finish-edit--button">Finish</button>
-                    </div>
-                  </div>
+        </div>
+        <div class="event-card--sub-section">
+          <div class="sub-section--header">
+            <p class="sub-section--header__title">Llamadas</p>
+            <button class="sub-section--header__button">+</button>
+          </div>
+          <div class="call-card">
+            <div class="call-card--header">
+              <p class="call--title">Llamada 1</p>
+              <div class="call--header__data-container">
+                <div class="title-container">
+                  <p class="title-container--text__orange">Fecha</p>
+                  <p class="title-container--text__grey">12/11/25</p>
+                </div>
+                <div class="title-container">
+                  <p class="title-container--text__orange">Duración</p>
+                  <p class="title-container--text__grey">00:12:24</p>
                 </div>
               </div>
+              <button class="sub-section--header__button">...</button>
             </div>
+            <hr>
+            <div class="call-card--main display--flex space--between">
+              <div class="main--data-container">
+                <div class="data-box">
+                  <p class="data-box--title">Interest</p>
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                </div>
+                <div class="data-box">
+                  <p class="data-box--title">Objections</p>
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                </div>
+                <div class="data-box">
+                  <p class="data-box--title">Potential</p>
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                </div>
+                <div class="data-box">
+                  <p class="data-box--title">Clousure</p>
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                  <input type="checkbox" class="step-checkbox">
+                </div>
+              </div>
+              <div class="main--call-rating"></div>
+            </div>
+          </div>
           </div>
         </div>
       </div>
