designed right subcontainer

--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -35,7 +35,7 @@
       </div>
     </header>
     <section class="grid padding--lateral__24 users-grid">
-      <div class="card">
+      <div class="card width__100">
         <div class="event-card user-card grid-cell">
           <div class="display--flex">
             <div>
@@ -86,8 +86,8 @@
                   <p class="title-container--text__orange">Duración</p>
                   <p class="title-container--text__grey">00:12:24</p>
                 </div>
+                <button class="sub-section--header__button">...</button>
               </div>
-              <button class="sub-section--header__button">...</button>
             </div>
             <hr>
             <div class="call-card--main display--flex space--between">
@@ -125,7 +125,10 @@
                   <input type="checkbox" class="step-checkbox">
                 </div>
               </div>
-              <div class="main--call-rating"></div>
+              <div class="main--call-rating text-align-center">
+                <p class="call-rating--title">Call rate</p>
+                <p class="call-rating--number">9.6</p>
+              </div>
             </div>
           </div>
           </div>
