--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -125,12 +125,13 @@
                   <input type="checkbox" class="step-checkbox">
                 </div>
               </div>
-              <div class="main--call-rating text-align-center">
-                <p class="call-rating--title">Call rate</p>
-                <p class="call-rating--number">9.6</p>
+              <div class="text-align-center display--flex align-itmes__center">
+                <div class="main--call-rating">
+                  <p class="call-rating--title">Call rate</p>
+                  <p class="call-rating--number">9.6</p>
+                </div>
               </div>
             </div>
-          </div>
           </div>
         </div>
       </div>
