working on button display

--- a/proyectsJs/calling-panel/index.html
+++ b/proyectsJs/calling-panel/index.html
@@ -86,7 +86,19 @@
                   <p class="title-container--text__orange">Duración</p>
                   <p class="title-container--text__grey">00:12:24</p>
                 </div>
-                <button class="sub-section--header__button">...</button>
+                <div>
+                  <button class="sub-section--header__button">...</button>
+                  <div class="call-card--select">
+                    <div class="display--flex call-card--button call-card--button__edit">
+                      <p>Edit Call</p>
+                      <img src="./imgs/pencil.png" alt="Edit button">
+                    </div>
+                    <div class="display--flex call-card--button call-card--button__delete">
+                      <p>Delete Call</p>
+                      <img src="./imgs/delete.png" alt="Delete button">
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <hr>
